[Improve] project page minor improvement